# CRIMSONGUI

./: .clang-format  .gitignore  CMakeLists.txt  CPack_Package_All.cmake  Doxyfile  LICENSE.txt  NonSuperBuild.cmake  README.md  SuperBuild.cmake  attribution_CRIMSON_GUI.html  contributing.md  contributors.txt
Apps/: Apps.cmake  (+1 more)
Apps/CRIMSON/: CMakeLists.txt  CPackConfig.cmake.in  CPackOptions.cmake  CRIMSON.cpp  CRIMSON.vcxproj.user.in  JenkinsEnv.properties.in  splashscreen.ai  splashscreen_old.ai  startCRIMSON.bat.in  target_libraries.cmake
Apps/CRIMSON/icons/: CRIMSON.aps  icon.icns
Apps/NetlistEditor/: AUTHOR  CMakeLists.txt  README  THANKS  TODO  config.h.in  doxy.cfg
Apps/NetlistEditor/cmake/: MacOSXBundle_Info.plist.in  MacOSXBundle_fixup_bundle.cmake.in  MacOSXBundle_locversion.plist.in
Apps/NetlistEditor/src/: CMakeLists.txt  config.h  stuff.dox
Modules/: CMakeLists.txt
Modules/AsyncTask/: AsyncTask.cpp  AsyncTask.h  AsyncTaskWithResult.h  CMakeLists.txt  files.cmake
Modules/CGALVMTKMeshingKernel/: CMakeLists.txt  files.cmake
Modules/CGALVMTKMeshingKernel/DataManagement/: MeshData.cpp  MeshData.h  MeshingParametersData.cpp  MeshingParametersData.h
Modules/CGALVMTKMeshingKernel/ExtensionPoint/: IMeshingKernel.cpp  IMeshingKernel.h  crimsonTetGenWrapper.cpp  crimsonTetGenWrapper.h
Modules/CGALVMTKMeshingKernel/IO/: MeshDataCoreObjectFactory.cpp  MeshDataCoreObjectFactory.h  MeshDataIO.cpp  MeshDataIO.h  MeshingKernelIOMimeTypes.cpp  MeshingKernelIOMimeTypes.h  MeshingParametersBoostIO.h  MeshingParametersDataIO.cpp  MeshingParametersDataIO.h
Modules/CGALVMTKMeshingKernel/Initialization/: MeshingKernelModuleActivator.cpp
Modules/CGALVMTKMeshingKernel/Rendering/: MeshDataMapper.cpp  MeshDataMapper.h
Modules/CRIMSONParticles/: CMakeLists.txt  files.cmake
Modules/CRIMSONParticles/include/: crimsonparticles.h
Modules/CRIMSONParticles/src/: crimsonparticles.cpp
Modules/CRIMSONUtils/: CMakeLists.txt  files.cmake
Modules/CRIMSONUtils/include/: ImmutableRanges.h  NodePredicateDerivation.h  NodePredicateNone.h
Modules/CRIMSONUtils/src/: NodePredicateDerivation.cpp
Modules/PCMRIKernel/: CMakeLists.txt  files.cmake
Modules/PCMRIKernel/DataManagement/: PCMRIData.cpp  PCMRIData.h
Modules/PCMRIKernel/ExtensionPoint/: IPCMRIKernel.cpp  IPCMRIKernel.h
Modules/PCMRIKernel/IO/: Multi_ArraySerialize.h  PCMRIDataBoostIO.h  PCMRIDataCoreObjectFactory.cpp  PCMRIDataCoreObjectFactory.h  PCMRIDataIO.cpp  PCMRIDataIO.h  PCMRIKernelIOMimeTypes.cpp  PCMRIKernelIOMimeTypes.h
Modules/PCMRIKernel/Initialization/: PCMRIKernelModuleActivator.cpp
Modules/PCMRIKernel/Rendering/: PCMRIDataMapper.cpp  PCMRIDataMapper.h
Modules/PythonSolverSetupService/: CMakeLists.txt  files.cmake
Modules/PythonSolverSetupService/include/: PythonBoundaryCondition.h  PythonBoundaryConditionSet.h  PythonFaceDataImpl.h  PythonMaterialData.h  PythonSolverParametersData.h  PythonSolverSetupManager.h  PythonSolverSetupService.h  PythonSolverSetupServiceActivator.h  PythonSolverStudyData.h
Modules/PythonSolverSetupService/src/: PythonBoundaryCondition.cpp  PythonBoundaryConditionSet.cpp  PythonFaceDataImpl.cpp  PythonQtWrappers.h  PythonSolverParametersData.cpp  PythonSolverSetupManager.cpp  PythonSolverSetupService.cpp  PythonSolverSetupServiceActivator.cpp  PythonSolverStudyData.cpp  QtPropertyBrowserTools.h  SolverSetupPythonObjectIO.h  SolverSetupPythonUtils.h
Modules/SolidKernel/: CMakeLists.txt  files.cmake
Modules/SolidKernel/DataManagement/: DiscreteSolidData.cpp  DiscreteSolidData.h  OCCBRepData.cpp  OCCBRepData.h  SolidData.cpp  SolidData.h  vtkGetBoundaryFaces.cpp  vtkGetBoundaryFaces.h
Modules/SolidKernel/ExtensionPoint/: FaceIdentifier.h  FaceIdentifierBoostIO.h  ISolidModelKernel.cpp  ISolidModelKernel.h
Modules/SolidKernel/IO/: DiscreteDataIOMimeTypes.cpp  DiscreteDataIOMimeTypes.h  DiscreteSolidDataIO.cpp  DiscreteSolidDataIO.h  OCCBRepDataIO.cpp  OCCBRepDataIO.h  OpenCascadeSolidKernelIOMimeTypes.cpp  OpenCascadeSolidKernelIOMimeTypes.h  SolidDataCoreObjectFactory.cpp  SolidDataCoreObjectFactory.h  SolidDataFaceInfoBoostIO.h
Modules/SolidKernel/Initialization/: SolidKernelModuleActivator.cpp
Modules/SolidKernel/Interactions/: SolidDataFacePickingObserver.cpp  SolidDataFacePickingObserver.h
Modules/SolidKernel/Rendering/: SolidDataMapper.cpp  SolidDataMapper.h
Modules/SolidKernel/Testing/: CMakeLists.txt  OCCBlendingTest.cpp  OCCLoftingTest.cpp  OCCTestingConfig.h.in  files.cmake
Modules/SolverSetupService/: CMakeLists.txt  files.cmake
Modules/SolverSetupService/include/: FaceData.h  IBoundaryCondition.h  IBoundaryConditionSet.h  IMaterialData.h  ISolverParametersData.h  ISolverSetupManager.h  ISolverSetupService.h  ISolverStudyData.h  QtPropertyStorage.h  SolutionData.h  SolverSetupUtils.h
Modules/SolverSetupService/src/: SolutionData.cpp
Modules/VesselTree/: CMakeLists.txt  files.cmake
Modules/VesselTree/DataManagement/: VesselForestData.cpp  VesselForestData.h  VesselForestDataGraphTraits.h  VesselPathAbstractData.cpp  VesselPathAbstractData.h  VesselPathOperation.cpp  VesselPathOperation.h  vtkParametricSplineVesselPathData.cpp  vtkParametricSplineVesselPathData.h
Modules/VesselTree/IO/: IOUtilDataSerializer.h  VesselForestCoreObjectFactory.cpp  VesselForestCoreObjectFactory.h  VesselForestDataIO.cpp  VesselForestDataIO.h  VesselTreeIOMimeTypes.cpp  VesselTreeIOMimeTypes.h  vtkParametricSplineVesselPathIO.cpp  vtkParametricSplineVesselPathIO.h
Modules/VesselTree/Initialization/: VesselTreeModuleActivator.cpp
Modules/VesselTree/Interactions/: VesselPathInteractor.cpp  VesselPathInteractor.h
Modules/VesselTree/Rendering/: vtkParametricSplineVesselPathVtkMapper3D.cpp  (+1 more)
Patch/commontk_QtPropertyBrowser/: CMakeLists.txt
Presolver/: CMakeLists.txt  cmd.cxx  cmd.h  cvSolverIO.cxx  cvSolverIO.h  directsolve.c  displacements.cxx  helpers.cxx  supre-cmds.cxx  supre.cxx
Presolver/CMake/: FindSPARSE.cmake
Presolver/Fortran/: CMakeLists.txt  stannspcg.f
Presolver/Testing/: CMakeLists.txt  RunPresolverAndCompareOutput.cmake
(+573 files in other folders)
